--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-server.port:8080
+server.port=8080   
 
-spring.jpa.database=ORACLE
+spring.jpa.database=ORACLE 
 spring.datasource.url=jdbc:oracle:thin:@curso2023.gestionproyectos.com:1521:xe
 spring.datasource.username=NGM_alumno
 spring.datasource.password=Curso2023
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
